--- a/themes/editorial/sass/layout/_main.scss
+++ b/themes/editorial/sass/layout/_main.scss
@@ -7,6 +7,7 @@
 /* Main */
 
 	#main, #novinky {
+		overflow-y: auto;
 		@include vendor('flex-grow', '1');
 		@include vendor('flex-shrink', '1');
 
